# imdb-scraper-heatmap

./: LICENSE.md  README.md  heatmap.py  main.py  pyproject.toml  requirements.txt  scrape.py
data/: Arcane.csv  Breaking Bad.csv  Dark.csv  Game_Of_Thrones.csv  Legends_of_Korra.csv  Pokemon.csv  Prison Break.csv  Shadowhunters.csv  The 100.csv  The_Last_Airbender.csv  The_Office.csv  The_Witcher.csv  Top Gear.csv
examples/: plot_heatmap.py  scrape.py  scrape_to_csv.py  series.txt
examples/data/: Arcane.csv  Avatar_The_Last_Airbender.csv  Bones.csv  Breaking_Bad.csv  Dark.csv  Friends.csv  Game_Of_Thrones.csv  Money_Heist.csv  NCIS_Naval_Criminal_Investigative_Service.csv  Navy_CIS.csv  Pokémon.csv  Prison_Break.csv  Riverdale.csv  Shadowhunters_The_Mortal_Instruments.csv  The_100.csv  The_Legend_of_Korra.csv  The_Office.csv  The_Witcher.csv  Top_Gear.csv
imdb_heatmap/: heatmap.py  scraper.py  serializer.py
scraper/: models.py  scraper.py
seriesheatmap/: heatmap.py  scraper.py
