[project]
name = "imdb_heatmap"
version = "0.0.1"
authors = [
  { name="Florian Trautweiler", email="florian.trautweiler@hispeed.ch" },
]
description = "Scarper and heatmap plotter for episode ratings of series on IMDB"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/trflorian/imdb-scraper-heatmap"
"Bug Tracker" = "https://github.com/trflorian/imdb-scraper-heatmap/issues"